--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bech32": "^2.0.0",
     "buffer": "^6.0.3",
     "framer-motion": "^9.0.4",
+    "noble-secp256k1": "^1.2.14",
     "nostr-react-habla": "^0.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
