--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "bech32": "^2.0.0",
     "buffer": "^6.0.3",
     "framer-motion": "^9.0.4",
+    "jotai": "^2.0.2",
     "noble-secp256k1": "^1.2.14",
-    "nostr-react-habla": "^0.6.5",
+    "nostr-tools": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
