--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fontsource/ibm-plex-mono": "^4.5.13",
+    "@fontsource/inter": "^4.5.15",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
