--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/ibm-plex-mono": "^4.5.13",
     "@fontsource/inter": "^4.5.15",
+    "@fontsource/lato": "^4.5.10",
+    "@fontsource/playfair-display": "^4.5.13",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
