--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "buffer": "^6.0.3",
     "framer-motion": "^9.0.4",
     "jotai": "^2.0.2",
+    "js-sha256": "^0.9.0",
     "light-bolt11-decoder": "^2.1.0",
     "noble-secp256k1": "^1.2.14",
     "nostr-tools": "1.7.0",
