--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "remark-gfm": "^3.0.1",
+    "remark-toc": "^8.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
