--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-scripts": "5.0.1",
     "remark-gfm": "^3.0.1",
     "remark-toc": "^8.0.1",
+    "slugify": "^1.6.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
