--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-twitter-embed": "^4.0.4",
     "remark-gfm": "^3.0.1",
     "remark-toc": "^8.0.1",
     "slugify": "^1.6.5",
