--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-twitter-embed": "^4.0.4",
+    "rehype-katex": "^6.0.2",
     "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "remark-toc": "^8.0.1",
     "slugify": "^1.6.5",
     "typescript": "^4.9.5",
