--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-scripts": "5.0.1",
     "react-twitter-embed": "^4.0.4",
     "rehype-katex": "^6.0.2",
+    "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "remark-toc": "^8.0.1",
