--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.0.11",
     "bech32": "^2.0.0",
     "buffer": "^6.0.3",
+    "emoji-picker-react": "^4.4.8",
     "framer-motion": "^9.0.4",
     "jotai": "^2.0.2",
     "js-sha256": "^0.9.0",
