--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "js-sha256": "^0.9.0",
     "light-bolt11-decoder": "^2.1.0",
     "noble-secp256k1": "^1.2.14",
-    "nostr-tools": "1.7.0",
+    "nostr-tools": "^1.8.4",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
